Include input file type

--- a/app/assets/styles/global/_forms.scss
+++ b/app/assets/styles/global/_forms.scss
@@ -507,7 +507,7 @@ label[for] {
   }
 
   input:checked ~ .form__option__ui {
-    background: $primary-color;
+    background: $accent-color;
 
     &::before {
       transform: translate(100%, -50%);
