--- a/app/assets/styles/projects/_single.scss
+++ b/app/assets/styles/projects/_single.scss
@@ -40,6 +40,11 @@
     .card__contents {
       background: none;
       box-shadow: none;
+      border-radius: 0;
+
+      &::after {
+        display: none;
+      }
     }
   }
 }
@@ -67,10 +72,10 @@
       color: #fff;
       text-align: right;
       background: linear-gradient(135deg, transparent 50%, $success-color 0);
-      -webkit-backface-visibility: hidden;
+      backface-visibility: hidden;
       padding: 0.5rem;
       pointer-events: none;
-      opacity: 0;
+      opacity: 0.32;
       transition: opacity 0.24s ease 0s;
     }
   }
