Use new source data structure

--- a/app/assets/styles/projects/_single.scss
+++ b/app/assets/styles/projects/_single.scss
@@ -89,7 +89,7 @@
   @extend %collecticon-page-cog;
 }
 
-.psb--villages .card__contents::before {
+.psb--origins .card__contents::before {
   @extend %collecticon-houses;
 }
 
