Fix form margins

--- a/app/assets/styles/global/_forms.scss
+++ b/app/assets/styles/global/_forms.scss
@@ -3,12 +3,10 @@
    ========================================================================== */
 
 .form {
-  &,
-  > * {
-    margin-bottom: $global-spacing ;
-  }
+  margin-bottom: $global-spacing;
 
-  > *:last-child {
+  > *:last-child,
+  .inner > *:last-child {
     margin-bottom: 0;
   }
 }
@@ -143,6 +141,7 @@ textarea.form__control {
 
 .form__group {
   @extend .clearfix;
+  margin-bottom: $global-spacing;
 
   > *:last-child {
     margin-bottom: 0;
@@ -278,8 +277,7 @@ textarea.form__control {
   position: relative;
   border: 0;
   border-radius: $base-border-radius;
-  margin-left: (-$global-spacing);
-  margin-right: (-$global-spacing);
+  margin: 0 (-$global-spacing) $global-spacing (-$global-spacing);
   padding: $global-spacing;
   background: rgba($base-color, 0.04);
 
@@ -610,6 +608,7 @@ label[for] {
 
 .form__extra-actions {
   @extend .clearfix;
+  margin-bottom: $global-spacing;
 
   * {
     vertical-align: top;
