Replace deprecated Bourbon mixins. Fix #117

--- a/app/assets/styles/core/_animation.scss
+++ b/app/assets/styles/core/_animation.scss
@@ -5,7 +5,7 @@
 /* Page
    ========================================================================== */
 
-@include keyframes(reveal) {
+@keyframes reveal {
   0% {
     opacity: 0;
   }
