Restyle results components

--- a/app/assets/styles/core/_base.scss
+++ b/app/assets/styles/core/_base.scss
@@ -153,3 +153,12 @@ main {
   background-color: rgba($base-color, 0.64);
   color: #fff;
 }
+
+
+/**
+ * Remove margin-bottom on the last 'rwrapper' child.
+ */
+
+.rwrapper > *:last-child {
+  margin-bottom: 0;
+}
