--- a/app/assets/styles/global/_inpage.scss
+++ b/app/assets/styles/global/_inpage.scss
@@ -36,6 +36,11 @@
     @extend .truncated;
     max-width: 100%;
     margin: 0;
+
+    .label {
+      position: relative;
+      transform: translate(0, 0.5em);
+    }
   }
 
   .inpage__description {
