Reposition map controls

--- a/app/assets/styles/scenarios/_single.scss
+++ b/app/assets/styles/scenarios/_single.scss
@@ -120,6 +120,10 @@
 
 .scenario-vis__map {
   height: 32rem;
+
+  .mapboxgl-ctrl-top-right .mapboxgl-ctrl {
+    margin: $global-spacing;
+  }
 }
 
 .scenario-vis__legend {
