--- a/app/assets/styles/global/_forms.scss
+++ b/app/assets/styles/global/_forms.scss
@@ -44,7 +44,9 @@
   }
 
   &:focus,
-  &:active {
+  &--focus,
+  &:active,
+  &--active {
     outline: 0;
     box-shadow: inset 0 -2px 0 0 $link-color;
   }
