Include card search
Work in progress.

--- a/app/assets/styles/global/_cards.scss
+++ b/app/assets/styles/global/_cards.scss
@@ -284,6 +284,10 @@ a.card__contents {
   @extend %collecticon-pencil;
 }
 
+.ca-search::before {
+  @extend %collecticon-magnifier-left;
+}
+
 
 /* Card button
    ========================================================================== */
