--- a/app/assets/styles/global/_cards.scss
+++ b/app/assets/styles/global/_cards.scss
@@ -162,6 +162,19 @@ a.card__contents {
   }
 }
 
+.card__status {
+  text-align: center;
+  font-weight: $base-font-regular;
+  color: rgba($base-font-color, 0.48);
+  font-style: italic;
+  padding: ($global-spacing * 2) $global-spacing;
+  margin-bottom: $global-spacing;
+
+  > *:last-child {
+    margin-bottom: 0;
+  } 
+}
+
 
 /* Card footer
    ========================================================================== */
