--- a/app/assets/styles/global/_drops.scss
+++ b/app/assets/styles/global/_drops.scss
@@ -23,6 +23,7 @@
 }
 
 .drop__content {
+  @extend %drop-skin;
   position: absolute;
   z-index: 1000;
   width: 12rem;
@@ -33,9 +34,6 @@
   color: $base-font-color;
   font-size: 1rem;
   line-height: 1.5;
-  background: #fff;
-  box-shadow: 0 4px 16px 2px rgba($base-color, 0.08);
-  border-radius: $base-border-radius;
 
   /* Animation */
 
