--- a/app/assets/styles/main.scss
+++ b/app/assets/styles/main.scss
@@ -73,10 +73,12 @@
 @import "global/labels";
 @import "global/drops";
 @import "global/cards";
+@import "global/popovers";
 @import "global/modals";
 @import "global/alerts";
 @import "global/page";
 @import "global/inpage";
+@import "global/navs";
 @import "global/loading";
 
 
@@ -112,3 +114,5 @@
 @import "vendor/react-tooltip";
 @import "vendor/react-paginate";
 @import "../../../node_modules/mapbox-gl/dist/mapbox-gl";
+
+// @import "vendor/mapbox-gl";
