Override mapbox styles

--- a/app/assets/styles/main.scss
+++ b/app/assets/styles/main.scss
@@ -113,6 +113,4 @@
 
 @import "vendor/react-tooltip";
 @import "vendor/react-paginate";
-@import "../../../node_modules/mapbox-gl/dist/mapbox-gl";
-
-// @import "vendor/mapbox-gl";
+@import "vendor/mapbox-gl";
