--- a/app/assets/styles/scenarios/_single.scss
+++ b/app/assets/styles/scenarios/_single.scss
@@ -121,10 +121,6 @@
 
 .scenario-vis__map {
   height: 32rem;
-
-  .mapboxgl-ctrl-top-right .mapboxgl-ctrl {
-    margin: $global-spacing;
-  }
 }
 
 .scenario-vis__legend {
@@ -134,46 +130,138 @@
   background: rgba(#fff, 0.80);
   padding: $global-spacing;
   border-radius: $base-border-radius;
+}
 
-  h3 {
-    @extend .heading-alt;
-    font-size: 0.75rem;
-    line-height: 1rem;
-    margin-bottom: $global-spacing / 2;
+.legend__block {
+  position: relative;
+
+  &:not(:last-child) {
+    padding-bottom: $global-spacing;
+    margin-bottom: $global-spacing;
+
+    &::after {
+      position: absolute;
+      bottom: 0;
+      left: 0;
+      width: 100%;
+      height: 1px;
+      content: '';
+      background: $base-alpha-color;
+    }
   }
+}
 
-  dl {
-    display: inline-block;
+.legend__title {
+  @extend .heading-alt;
+  font-size: 0.75rem;
+  line-height: 1rem;
+  margin-bottom: $global-spacing / 2;
+}
+
+.legend__dl {
+  padding: 0;
+  margin: 0;
+  font-size: 0.875rem;
+  line-height: 1.25rem;
+  overflow: hidden;
+
+  dt, dd {
+    float: left;
     padding: 0;
-    margin: 0;
+    margin: 0 0 0.25rem 0;
   }
 
   dt {
-    @extend .visually-hidden;
+    position: relative;
+    height: 1.25rem;
+    width: 1.25rem;
+    font-size: 0;
+    clear: left;
+    margin-right: $global-spacing / 2;
+    opacity: 1;
+
+    &::before {
+      position: absolute;
+      z-index: 1;
+      top: 50%;
+      left: 50%;
+      content: '';
+      transform: translate(-50%, -50%);
+      background: $base-font-color;
+    }
   }
+}
 
-  dd {
-    border-top: 1rem;
-    border-top-style: solid;
-    float: left;
-    width: 2rem;
-    margin: 0;
-    line-height: 1;
+.legend__dl--radius {
+  dt {
+    background: $base-alpha-color;
+    border-radius: $full-border-radius;
 
-    span {
-      display: inline-block;
-      font-size: 0.75rem;
-      margin-left: -1rem;
-      text-align: center;
-      width: 2rem;
+    &::before {
+      border-radius: $full-border-radius;
     }
   }
 
-  .l1 { border-top-color: #1a9850; }
-  .l2 { border-top-color: #91cf60; }
-  .l3 { border-top-color: #d9ef8b; }
-  .l4 { border-top-color: #fee08b; }
-  .l5 { border-top-color: #fc8d59; }
-  .l6 { border-top-color: #d73027; }
-  .l7 { border-top-color: #4d4d4d; }
+  dt:nth-of-type(1)::before {
+    height: 0.25rem;
+    width: 0.25rem;
+  }
+
+  dt:nth-of-type(2)::before {
+    height: 0.5rem;
+    width: 0.5rem;
+  }
+
+  dt:nth-of-type(3)::before {
+    height: 0.75rem;
+    width: 0.75rem;
+  }
+
+  dt:nth-of-type(4)::before {
+    height: 1rem;
+    width: 1rem;
+  }
+
+  dt:nth-of-type(5)::before {
+    height: 1.25rem;
+    width: 1.25rem;
+  }
+}
+
+.legend__dl--colors {
+  dt {
+    &::before {
+      height: 0.5rem;
+      width: 100%;
+      border-radius: $base-border-radius;
+    }
+  }
+
+  dt:nth-of-type(1)::before {
+    background: #1a9850;
+  }
+
+  dt:nth-of-type(2)::before {
+    background: #91cf60;
+  }
+
+  dt:nth-of-type(3)::before {
+    background: #d9ef8b;
+  }
+
+  dt:nth-of-type(4)::before {
+    background: #fee08b;
+  }
+
+  dt:nth-of-type(5)::before {
+    background: #fc8d59;
+  }
+
+  dt:nth-of-type(6)::before {
+    background: #d73027;
+  }
+
+  dt:nth-of-type(7)::before {
+    background: #4d4d4d;
+  }
 }
