Change controls and legend position

--- a/app/assets/styles/scenarios/_single.scss
+++ b/app/assets/styles/scenarios/_single.scss
@@ -126,7 +126,7 @@
 .scenario-vis__legend {
   position: absolute;
   bottom: $global-spacing;
-  left: $global-spacing;
+  right: $global-spacing;
   background: rgba(#fff, 0.80);
   padding: $global-spacing;
   border-radius: $base-border-radius;
