--- a/app/assets/styles/settings/_mixins.scss
+++ b/app/assets/styles/settings/_mixins.scss
@@ -140,6 +140,7 @@
     box-shadow: 0 -1px 1px 0 rgba($base-color, 0.04), 0 2px 6px 0 $shadow-color;
   }
 
+  &.button--hover,
   &:hover {
     background-color: $bg-color-hover;
   }
