--- a/app/assets/styles/global/_forms.scss
+++ b/app/assets/styles/global/_forms.scss
@@ -523,8 +523,8 @@ label[for] {
 
   .form__option__ui {
     margin: 0.25rem 0;
-    width: 2rem;
-    height: 1rem;
+    width: 2.5rem;
+    height: 1.25rem;
     border-radius: $full-border-radius;
     background: rgba($base-color, 0.16);
 
@@ -533,11 +533,26 @@ label[for] {
       position: absolute;
       top: 50%;
       left: 0;
-      transform: translate(0, -50%);
+      z-index: 2;
       content: '';
       height: 1.25rem;
       width: 1.25rem;
       border-radius: $full-border-radius;
+      transform: translate(0, -50%);
+      transition: all 0.24s ease 0s;
+    }
+
+    /* Icon handling */
+    [class^="collecticon-"],
+    [class*=" collecticon-"],
+    &::after {
+      position: absolute;
+      top: 50%;
+      right: 0;
+      z-index: 1;
+      font-size: 1rem;
+      color: #fff;
+      transform: translate(-0.25rem, -50%);
       transition: all 0.24s ease 0s;
     }
   }
@@ -554,6 +569,28 @@ label[for] {
       left: 100%;
       transform: translate(-100%, -50%);
     }
+
+    /* Icon handling */
+    [class^="collecticon-"],
+    [class*=" collecticon-"],
+    &::after {
+      right: 100%;
+      transform: translate(calc(100% + 0.25rem), -50%);
+    }
+  }
+}
+
+/* Iconified cases */
+
+.form__option.fos-io {
+
+  .form__option__ui::after {
+    @extend %collecticon-sm-xmark;
+  }
+
+  &.form__option--checked .form__option__ui::after,
+  input:checked ~ .form__option__ui::after {
+    @extend %collecticon-sm-tick;
   }
 }
 
