--- a/app/assets/styles/projects/_single.scss
+++ b/app/assets/styles/projects/_single.scss
@@ -21,34 +21,6 @@
   }
 }
 
-.psb-group {
-  @extend %card-skin;
-
-  .psb {
-    overflow: hidden;
-
-    &:not(:last-child)::after {
-      content: "";
-      position: absolute;
-      bottom: 0;
-      left: 5rem;
-      height: 1px;
-      width: 100%;
-      background: $base-alpha-color;
-    }
-
-    .card__contents {
-      background: none;
-      box-shadow: none;
-      border-radius: 0;
-
-      &::after {
-        display: none;
-      }
-    }
-  }
-}
-
 .psb {
   .card__contents {
     position: relative;
@@ -105,6 +77,43 @@
   @extend %collecticon-marker;
 }
 
+.psb-group {
+  @extend %card-skin;
+
+  .psb {
+    overflow: hidden;
+
+    &:not(:last-child)::after {
+      content: "";
+      position: absolute;
+      bottom: 0;
+      left: 4rem;
+      height: 1px;
+      width: 100%;
+      background: $base-alpha-color;
+    }
+
+    .card__contents {
+      background: none;
+      box-shadow: none;
+      border-radius: 0;
+      padding: $global-spacing $global-spacing $global-spacing ($global-spacing * 4);
+
+      &::before {
+        left: $global-spacing;
+      }
+
+      &::after {
+        display: none;
+      }
+    }
+  }
+}
+
+
+/* Diptych
+   ========================================================================== */
+
 .diptych {
   @include column(6/12);
   margin-top: $global-spacing * 2;
@@ -119,84 +128,14 @@
   }
 }
 
-// .diptych--info {
-//   @include column(4/12);
-// }
-
-// .diptych--scenarios {
-//   @include column(8/12);
-// }
-
-/* Details list
-   ========================================================================== */
-
-.project-details-list {
-  list-style: none;
-  margin: 0 (-$global-spacing) 0 0;
-  padding: ($global-spacing * 1.5) 0 ($global-spacing * 1.5) ($global-spacing * 4);
-
-  li:not(:last-child) {
-    box-shadow: inset 0 -1px 0 0 $base-alpha-color;
-    padding-bottom: $global-spacing;
-    margin: 0 0 $global-spacing 0;
-  }
+.diptych--col4 {
+  @include column(4/12);
 }
 
-.detail-download {
-  @extend .button, .button--primary-plain, .button--text-hidden;
-
-  &::before {
-    @extend %collecticon-download-3;
-  }
+.diptych--col8 {
+  @include column(8/12);
 }
 
-.project-detail {
-  position: relative;
-  padding-right: $global-spacing * 4;
-
-  > *:last-child {
-    margin: 0;
-  }
-
-  &::before,
-  .action-wrapper {
-    position: absolute;
-    top: 50%;
-    transform: translate(0, -50%);
-    margin: 0;
-  }
-
-  &::before {
-    left: - $global-spacing * 3.5;
-    font-size: 2rem;
-    opacity: 0.32;
-  }
-
-  .action-wrapper {
-    right: $global-spacing;
-  }
-
-  &.description::before {
-    @extend %collecticon-text-block;
-  }
-
-  &.profile::before {
-    @extend %collecticon-page-cog;
-  }
-
-  &.origins::before {
-    @extend %collecticon-houses;
-  }
-
-  &.admin-bounds::before {
-    @extend %collecticon-fence;
-  }
-}
-
-.project-detail__title {
-  @include heading(1rem);
-  margin: 0;
-}
 
 /* Scenarios list
    ========================================================================== */
