Tweak drop max width

--- a/app/assets/styles/global/_drops.scss
+++ b/app/assets/styles/global/_drops.scss
@@ -26,7 +26,8 @@
   @extend %drop-skin;
   position: absolute;
   z-index: 1000;
-  width: 12rem;
+  width: 100%;
+  max-width: 14rem;
   margin: 0;
   padding: $global-spacing;
   overflow: hidden;
@@ -275,7 +276,6 @@
   margin: (-$global-spacing) (-$global-spacing) $global-spacing (-$global-spacing);
   box-shadow: 0 1px 0 0 $base-alpha-color;
   padding: ($global-spacing / 2) 0;
-  max-width: 16rem;
   font-weight: $base-font-regular;
 
   &:last-child {
