Structure and style overlays menu
Also, update icon library.

--- a/app/assets/styles/global/_drops.scss
+++ b/app/assets/styles/global/_drops.scss
@@ -277,6 +277,7 @@
   box-shadow: 0 1px 0 0 $base-alpha-color;
   padding: ($global-spacing / 2) 0;
   font-weight: $base-font-regular;
+  min-width: 12rem;
 
   &:last-child {
     margin-bottom: (-$global-spacing);
