--- a/app/assets/styles/scenarios/_single.scss
+++ b/app/assets/styles/scenarios/_single.scss
@@ -115,6 +115,49 @@
   max-width: 28rem;
 }
 
+.pchange {
+  font-size: 0;
+  display: inline-block;
+  vertical-align: top;
+
+  &::before { 
+    height: 1.25rem;
+    width: 1.25rem;
+    background: $base-font-color;
+    color: #fff;
+    font-size: 1rem;
+    line-height: 1.25rem;
+    text-align: center;
+    display: inline-block;
+    border-radius: $full-border-radius;
+    vertical-align: top;
+    margin-top: 0.125rem;
+  }
+}
+
+.pchange--up::before {
+  @extend %collecticon-sm-chevron-up;
+  background: $danger-color;
+}
+
+.pchange--up2x::before {
+  @extend %collecticon-sm-chevron-up-trail;
+  background: shade($danger-color, 32%);
+}
+
+.pchange--equal::before {
+  @extend %collecticon-sm-equal;
+}
+
+.pchange--down::before {
+  @extend %collecticon-sm-chevron-down;
+  background: $success-color;
+}
+
+.pchange--down2x::before {
+  @extend %collecticon-sm-chevron-down-trail;
+  background: shade($success-color, 32%);
+}
 
 /* Results: ETA Vis
    ========================================================================== */
