--- a/app/assets/styles/global/_inpage.scss
+++ b/app/assets/styles/global/_inpage.scss
@@ -209,15 +209,33 @@
   border-radius: $base-border-radius;
   padding: $global-spacing;
   margin: 0 0 ($global-spacing * 2) 0;
+  word-wrap: nowrap;
 
   * {
     vertical-align: top;
   }
 
   .filters-menu {
-    padding: 0;
-    margin: (-$global-spacing / 2) 0;
     font-size: 0;
+    box-shadow: -1px 0 0 0 rgba(#fff, 0.16);
+    margin: (-$global-spacing / 4) 0;
+    padding: 0 $global-spacing;
+    display: inline-block;
+    vertical-align: top;
+
+    &:first-child {
+      padding-left: 0;
+      box-shadow: none;
+    }
+
+    &:last-child {
+      padding-right: 0;
+      float: right;
+    }
+
+    > *:last-child {
+      margin-right: 0;
+    }
 
     dt,
     dd {
@@ -235,6 +253,11 @@
 
     dd {
       margin: 0 $global-spacing 0 0;
+    }
+
+    button span {
+      @extend .truncated;
+      max-width: 8rem;
     }
   }
 }
