--- a/app/assets/styles/scenarios/_single.scss
+++ b/app/assets/styles/scenarios/_single.scss
@@ -193,7 +193,7 @@
 }
 
 .legend__dl--size {
-  dt {
+  .bucket {
     background: $base-alpha-color;
     border-radius: $full-border-radius;
 
@@ -202,27 +202,27 @@
     }
   }
 
-  dt:nth-of-type(1)::before {
+  .bucket--xs::before {
     height: 0.25rem;
     width: 0.25rem;
   }
 
-  dt:nth-of-type(2)::before {
+  .bucket--s::before {
     height: 0.5rem;
     width: 0.5rem;
   }
 
-  dt:nth-of-type(3)::before {
+  .bucket--m::before {
     height: 0.75rem;
     width: 0.75rem;
   }
 
-  dt:nth-of-type(4)::before {
+  .bucket--l::before {
     height: 1rem;
     width: 1rem;
   }
 
-  dt:nth-of-type(5)::before {
+  .bucket--xl::before {
     height: 1.25rem;
     width: 1.25rem;
   }
