Add tooltip with value

--- a/app/assets/styles/scenarios/_single.scss
+++ b/app/assets/styles/scenarios/_single.scss
@@ -159,6 +159,10 @@
   background: shade($danger-color, 32%);
 }
 
+.value-wrapper {
+  display: inline-block;
+}
+
 /* Results: ETA Vis
    ========================================================================== */
 
