--- a/app/assets/styles/scenarios/_single.scss
+++ b/app/assets/styles/scenarios/_single.scss
@@ -276,7 +276,7 @@
 }
 
 .legend__dl--colors {
-  dt {
+  .color {
     &::before {
       height: 0.5rem;
       width: 100%;
@@ -284,31 +284,31 @@
     }
   }
 
-  dt:nth-of-type(1)::before {
+  .color--alpha::before {
     background: #1a9850;
   }
 
-  dt:nth-of-type(2)::before {
+  .color--beta::before {
     background: #91cf60;
   }
 
-  dt:nth-of-type(3)::before {
+  .color--gama::before {
     background: #d9ef8b;
   }
 
-  dt:nth-of-type(4)::before {
+  .color--delta::before {
     background: #fee08b;
   }
 
-  dt:nth-of-type(5)::before {
+  .color--epsilon::before {
     background: #fc8d59;
   }
 
-  dt:nth-of-type(6)::before {
+  .color--zeta::before {
     background: #d73027;
   }
 
-  dt:nth-of-type(7)::before {
+  .color--eta::before {
     background: #4d4d4d;
   }
 }
