--- a/app/assets/styles/scenarios/_single.scss
+++ b/app/assets/styles/scenarios/_single.scss
@@ -115,6 +115,53 @@
   max-width: 28rem;
 }
 
+.pchange {
+  font-size: 0;
+  display: inline-block;
+  vertical-align: top;
+
+  &::before { 
+    height: 1.25rem;
+    width: 1.25rem;
+    background: $base-font-color;
+    color: #fff;
+    font-size: 1rem;
+    line-height: 1.25rem;
+    text-align: center;
+    display: inline-block;
+    border-radius: $full-border-radius;
+    vertical-align: top;
+    margin-top: 0.125rem;
+  }
+}
+
+.pchange--up::before {
+  @extend %collecticon-sm-chevron-up;
+  background: $success-color;
+}
+
+.pchange--up2x::before {
+  @extend %collecticon-sm-chevron-up-trail;
+  background: shade($success-color, 32%);
+}
+
+.pchange--equal::before {
+  @extend %collecticon-sm-equal;
+}
+
+.pchange--down::before {
+  @extend %collecticon-sm-chevron-down;
+  background: $danger-color;
+}
+
+.pchange--down2x::before {
+  @extend %collecticon-sm-chevron-down-trail;
+  background: shade($danger-color, 32%);
+}
+
+.value-wrapper {
+  display: inline-block;
+}
 
 /* Results: ETA Vis
    ========================================================================== */
@@ -193,7 +240,7 @@
 }
 
 .legend__dl--size {
-  .bucket {
+  .radius {
     background: $base-alpha-color;
     border-radius: $full-border-radius;
 
@@ -202,34 +249,34 @@
     }
   }
 
-  .bucket--xs::before {
+  .radius--xs::before {
     height: 0.25rem;
     width: 0.25rem;
   }
 
-  .bucket--s::before {
+  .radius--s::before {
     height: 0.5rem;
     width: 0.5rem;
   }
 
-  .bucket--m::before {
+  .radius--m::before {
     height: 0.75rem;
     width: 0.75rem;
   }
 
-  .bucket--l::before {
+  .radius--l::before {
     height: 1rem;
     width: 1rem;
   }
 
-  .bucket--xl::before {
+  .radius--xl::before {
     height: 1.25rem;
     width: 1.25rem;
   }
 }
 
 .legend__dl--colors {
-  dt {
+  .color {
     &::before {
       height: 0.5rem;
       width: 100%;
@@ -237,31 +284,31 @@
     }
   }
 
-  dt:nth-of-type(1)::before {
+  .color--alpha::before {
     background: #1a9850;
   }
 
-  dt:nth-of-type(2)::before {
+  .color--beta::before {
     background: #91cf60;
   }
 
-  dt:nth-of-type(3)::before {
+  .color--gama::before {
     background: #d9ef8b;
   }
 
-  dt:nth-of-type(4)::before {
+  .color--delta::before {
     background: #fee08b;
   }
 
-  dt:nth-of-type(5)::before {
+  .color--epsilon::before {
     background: #fc8d59;
   }
 
-  dt:nth-of-type(6)::before {
+  .color--zeta::before {
     background: #d73027;
   }
 
-  dt:nth-of-type(7)::before {
+  .color--eta::before {
     background: #4d4d4d;
   }
 }
