Temporary button to trigger export modal

--- a/app/assets/styles/global/_inpage.scss
+++ b/app/assets/styles/global/_inpage.scss
@@ -197,6 +197,14 @@
   }
 }
 
+.ipa-export {
+  @extend .button--achromic, .button--text-hidden;
+
+  &::before {
+    @extend %collecticon-download-3;
+  }
+}
+
 
 /* Inpage Secondary Nav
    ========================================================================== */
