Allow disabling result export on RAH export
Contribute to WorldBank-Transport/rah#37

--- a/app/assets/styles/global/_forms.scss
+++ b/app/assets/styles/global/_forms.scss
@@ -549,6 +549,8 @@ label[for] {
    ========================================================================== */
 
 .form__option--switch {
+  display: inline-flex;
+  margin-top: 0;
 
   input {
     @extend .visually-hidden;
