--- a/app/assets/styles/scenarios/_single.scss
+++ b/app/assets/styles/scenarios/_single.scss
@@ -92,6 +92,12 @@
       padding-right: $global-spacing * 2;
     }
   }
+
+  .table--has-total {
+    tr:nth-last-child(2) > * {
+      box-shadow: inset 0 -2px 0 0 $base-alpha-color;
+    }
+  }
 }
 
 .empty-content {
